# anim3d

./: CMakeLists.txt  README.md  dokumentacja.md
anim3d/src/: Application.cpp  Application.h  GuiSceneController.cpp  GuiSceneController.h  SceneBuilder.h
anim3d/src/api/: IndexBuffer.cpp  Timer.h  VertexBuffer.cpp  glUtils.h
anim3d/src/scene/: Camera.cpp  Camera.h  ComplexModel.cpp  LightSource.cpp  Mesh.h  Model.h  ModelPartBehavior.h  MoveBehavior.cpp  Renderer.cpp  RotationBehavior.cpp  RotationBehavior.h  Sun.cpp  Sun.h
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  ComplexModel.cpp  ComplexModel.h  GeometryBuffer.cpp  GeometryBuffer.h  GuiSceneController.cpp  GuiSceneController.h  IndexBuffer.cpp  LightSource.cpp  LightSource.h  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelPartBehavior.cpp  ModelPartBehavior.h  ModelPopulation.h  Renderer.cpp  Renderer.h  RepeatedModel.h  SceneBuilder.cpp  SceneBuilder.h  Shader.cpp  Shader.h  Sun.cpp  Sun.h  Timer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  glUtils.h  main.cpp  populate.cpp  populate.h
src/api/: GeometryBuffer.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/dependencies/: glad.c  glad.h  stb_image.h
src/scene/: AnimatedModel.cpp  AnimatedModel.h  Camera.cpp  Camera.h  ComplexModel.h  LightSource.h  Model.cpp  ModelLoader.cpp  ModelLoader.h  MoveBehavior.h  Renderer.cpp  Renderer.h  RotationBehavior.cpp  Sun.cpp  Sun.h
src/shaders/gouraud/: default_vertex.shader  vertex.shader
src/shaders/light/: default_fragment.shader  (+1 more)
(+13 files in other folders)
